remove inner thread pool, use main thread to do work.